[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/FactoryBuildInfo.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[sub_resource type="Theme" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -763.0
margin_bottom = -495.0
script = ExtResource( 1 )

[node name="Panel" type="ColorRect" parent="."]
margin_right = 148.0
margin_bottom = 69.0
rect_min_size = Vector2( 100, 40 )
size_flags_horizontal = 3
theme = SubResource( 1 )
color = Color( 0.996078, 0.0352941, 0.101961, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 6.0
margin_top = 6.0
margin_right = 101.0
margin_bottom = 61.0
size_flags_horizontal = 3

[node name="FactoryLabel" type="Label" parent="Panel/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 131.0
margin_bottom = 14.0
text = "Factory"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 131.0
margin_bottom = 37.0
size_flags_vertical = 3

[node name="WorkersLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 2.0
margin_right = 119.0
margin_bottom = 16.0
size_flags_horizontal = 3
theme = SubResource( 2 )
text = "Workers occupied:"

[node name="WorkersAmountLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 123.0
margin_top = 2.0
margin_right = 131.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "0"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 41.0
margin_right = 131.0
margin_bottom = 55.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 57.0
margin_bottom = 14.0
text = "Time left"

[node name="TimeLeftBar" type="ProgressBar" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_left = 61.0
margin_right = 131.0
margin_bottom = 14.0
size_flags_horizontal = 3
percent_visible = false
